# EDA

./: pyproject.toml  task1.ipynb  task_2.csv  task_2.ipynb  task_3.ipynb
Задание/Задание/: json.json  Задание 1.xlsx  Задание 2 и 3.txt  Задание 4 (не обязательное).txt
