[tool.poetry]
name = "eda"
version = "0.1.0"
description = ""
authors = ["Nick <nicklisits@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
xlrd = "^2.0.1"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
openpyxl = "^3.1.2"
python-levenshtein = "^0.21.1"
fuzzywuzzy = "^0.18.0"
validate-email-address = "^1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
